--- a/mohana.html
+++ b/mohana.html
@@ -66,7 +66,7 @@
     <section class="declaration">
         <h2>Declaration</h2>
         <p>I hereby declare that the above information is true and correct to the best of my knowledge.</p>
-        <p><strong>Signature:</strong> Akash Guptha</p>
+        <p><strong>Signature:</strong> Mohanalakshmi</p>
     </section>
     <section id="resume">
     
@@ -80,7 +80,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Akash Guptha| All Rights Reserved</p>
+        <p>&copy; 2025 Mohanalakshmi| All Rights Reserved</p>
     </footer>
 
 </body>
