Update and rename mohana.html to Index.html

--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,8 @@
 
     <header>
         <img src="IMG_20250330_125024_1.jpg" alt="Your Profile Picture" class="profile-picture">
-        <h1>Mohanalakshmi</h1>        <p><ahref="mailto:[YourEmail]">[www.mohanalakshmi14@gmail.com]</a> | [9600053697]</p>
+        <h1>Mohanalakshmi</h1>        
+        <p><ahref="mailto:[YourEmail]">[www.mohanalakshmi14@gmail.com]</a> | [9600053697]</p>
     </header>
 
     <section class="career-objective">
