--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <header>
         <img src="IMG_20250330_125024_1.jpg" alt="this is my profile">
-        <h1>Manojkumar</h1>
+        <h1>Mohanalakshmi</h1>
         <p><a href="mailto:www.mohanalakshmi14@gmail.com">www mohanalakshmi14@gmail.com</a> | 9600053697</p>
     </header>
 
