--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <img src="IMG_20250330_125024_1.jpg" alt="this is my profile">
         <h1>Mohanalakshmi</h1>
-        <p><a href="mailto:www.mohanalakshmi14@gmail.com">www mohanalakshmi14@gmail.com</a> | 9600053697</p>
+        <p><a href="mailto:www.mohanalakshmi14@gmail.com">www.mohanalakshmi14@gmail.com</a> | 9600053697</p>
     </header>
 
     <section class="career-objective">
@@ -64,7 +64,7 @@
     <section class="declaration">
         <h2>Declaration</h2>
         <p>I hereby declare that the above information is true and correct to the best of my knowledge.</p>
-        <p><strong>Signature:</strong>Manojkumar</p>
+        <p><strong>Signature:</strong>Mohanalakshmi</p>
     </section>
 
     <section id="resume">
